         global variable as deprecated. Using/Calling them will cause
         warnings.
       + 'float' variables on LP64 architectures (64 bit) now have the same 
         precision as 'double' in C (the driver uses internally 'double'
         instead of the traditional self-built format).
       + Implemented union types. (#721)

    - Networking
       + UDP datagrams with lengths up to 65507 (including UDP and IPv4
         headers: 65535) bytes are supported.

    - Other
       + The driver requires a C99 compatible build system. Some checks and
         work-arounds for non-C99 were removed.
       + A bunch of statistic counters (string handler, object table, swapper,
         network layer,...) were changed to a larger type to prevent them from
         overflowing. (#521, #608)
       + Renamed some command-line flags to match the LPC defines better (#704)
         --heart-interval -> --heart-beat-interval
         --sync-heart     -> --synchronous-heart-beat
         --async-heart    -> --asynchronous-heart-beat
         --no-heart       -> --no-heart-beat
       + A new savefile format (version 2) was added to store the new 'double'
         floats losslessly. It additionally is simpler to write/restore and
         makes the savefiles more compact because only one representation of
         the float value is stored.


30-May-2009 (LDMud Team) -- 3.3.719
    - Fixed Crashes:
       + gmtime(), localtime(), ctime() and strftime() could crash the driver
         on platforms where time_t is 64 bits long and users supply huge
         values as time stamp (>2^55) due to unchecked results from libc
         functions (Bug #587).
       + Fixed a bug in esbrk() during memory allocation, where SINT
         (sizeof(word_t)) was not taken into account in the calculation of a
         block size, leading to crashes afterwards. (#611)

    - New Efuns:
       + configure_interactive(): To set options for interactives.