@@ -1,0 +1,13 @@
+inherit "/inh/private_proto";
+
+private void fun();
+
+int run_test()
+{
+    fun();
+    return 1;
+}
+
+private void fun()
+{
+}
